[gradle][LSP-1686] added support for Java_PREVIEW language level
GitOrigin-RevId: e3aa873017d587018d8663ea46e7394486000e62